# agent-mesh

./: .dockerignore  .env.example  .gitignore  ADOPTERS.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile.dev  Dockerfile.server  Dockerfile.sidecar  GOVERNANCE.md  IMPLEMENTATION-NOTES.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-langchain-agentmesh.yml  publish.yml
benchmarks/: __init__.py  bench_audit.py  bench_e2e.py  bench_identity.py  bench_policy.py  bench_trust.py  run_all.py
benchmarks/results/: BENCHMARKS.md  latest.json
charts/agentmesh/: Chart.yaml  values.yaml
dashboards/grafana/: mesh-overview.json
deployments/: prometheus.yml
docs/: CLOUDEVENTS_SCHEMA.md  GTM-PLAN.md  PRD-IMPLEMENTATION.md  PROXY-IMPLEMENTATION.md  RFC_AGENT_SBOM.md  api-reference.md  identity.md  sequences.md  service-mesh-comparison.md  troubleshooting.md  trust-scoring.md
docs/adr/: 001-ed25519-keys.md  002-trust-scoring-algorithm.md  003-delegation-chain-design.md  004-http-middleware-approach.md  README.md
docs/architecture/: overview.md  policy-propagation.md  reward-mechanism.md
docs/blog/: launch-announcement.md
docs/compliance/: eu-ai-act.md  iso-42001.md  nist-ai-rmf.md  soc2-mapping.md
docs/observability/: grafana.md
examples/: QUICKSTART.md  README.md  SUMMARY.md
examples/01-mcp-tool-server/: README.md  main.py
examples/02-customer-service/: README.md  main.py
examples/03-healthcare-hipaa/: README.md  main.py
examples/04-devops-automation/: README.md
examples/06-trust-score-dashboard/: trust_dashboard.py
papers/: GITHUB_ISSUES.md  README.md  generate_arxiv_packages.py
proto/: README.md
tests/: test_ai_card.py  test_anomaly.py  test_cli.py  test_coverage_boost.py  test_delegation_depth.py  test_entra_agent_id.py  test_expired_certs.py  test_fuzzing.py  test_governance.py  test_handshake_e2e.py  test_identity.py  test_persistent_audit.py  test_prometheus_metrics.py  test_protocol_snapshots.py  test_reward.py  test_services.py  test_trust.py  test_trust_decay.py  test_validation.py
(+119 files in other folders)
